Make sure overflow is hidden for context example

--- a/src/react-context-16.3/style.styl
+++ b/src/react-context-16.3/style.styl
@@ -2,6 +2,8 @@
   box-sizing border-box
 
 body
-  text-align center
   margin 0
   padding 0
+  height 100vh
+  width 100vw
+  overflow hidden
